# trt-camelot

./: .gitignore  Cargo.toml  test_db.sqlite  trt-protocol.drawio
crates/camelot/: Cargo.toml
crates/camelot/src/: error.rs  lib.rs  main.rs
crates/camelot/src/handlers/: callback.rs  create.rs  invalid.rs  invoke.rs  mod.rs
crates/camelot/tests/: client.rs
crates/camelot/tests/server/: mod.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  lib.rs  main.rs
crates/server/src/handlers/: call.rs  callback.rs  create.rs  invalid.rs  invoke.rs  leave.rs  listen.rs  mod.rs  query.rs  transaction.rs
crates/server/tests/: client.rs  integration_test.rs
crates/trtcp/: Cargo.toml  trtcp-1.0.xml
crates/trtcp/src/: error.rs  lib.rs
crates/trtcp/src/call/: mod.rs
crates/trtcp/src/request/: mod.rs
crates/trtcp/src/response/: mod.rs
