[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "macros", "derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }